Library Filter Alignment issue for RTL

--- a/force-app/main/community-pages-rh/aura/LibraryPI/LibraryPI.css
+++ b/force-app/main/community-pages-rh/aura/LibraryPI/LibraryPI.css
@@ -130,6 +130,7 @@
 .THIS img.language-filter-icon {
     height: 14px;
     width: 14px;
+    margin: 3%;
 }
 
 .THIS .slds-icon:hover {
